--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2536,7 +2536,7 @@ section,
   margin: 0 30px 0 0;
   transition: 0.3s;
   cursor: pointer;
-  display: flex;
+  display: block;
   align-items: flex-start;
 }
 
