--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,52 +299,14 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
 
 
 /* navmenu - Mobile */
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: relative;
-}
-
-.topnav #myLinks {
-  display: none;
-}
-
-.topnav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-}
-
-.topnav a.icon {
-  background: black;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-
-@media (max-width: 500px) {
+/* navmenu - Mobile */
+@media (max-width: 1199px) {
   .mobile-nav-toggle {
     color: var(--nav-color);
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
     cursor: pointer;
-    color: #FCD8A6;
     transition: color 0.3s;
   }
 
@@ -354,23 +316,18 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
   }
 
   .navmenu ul {
-    list-style: square; 
-  position:absolute;
-  inset: 10px 10px 20px 20px; /* Margin around the menu */
-  padding: 10px 0;
-  margin: 0;
-  border-radius: 6px;
-  background-color: var(--nav-mobile-background-color);
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  width: 50%; /* Width of the menu */
-  height: 50%; /* Height of the menu */
-  top: 15px;
-  right: 20px;
-  z-index: 9999;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-  transition: color 0.3s;
+    display: none;
+    list-style: none;
+    position: absolute;
+    inset: 60px 20px 20px 20px;
+    padding: 10px 0;
+    margin: 0;
+    border-radius: 6px;
+    background-color: var(--nav-mobile-background-color);
+    overflow-y: auto;
+    transition: 0.3s;
+    z-index: 9998;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
   }
 
   .navmenu a,
@@ -378,13 +335,12 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
     font-family: var(--nav-font);
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 500;
-    height: 50%;
-    width: 55%;
     display: flex;
-    color: #f3bf7f;
-    
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
     transition: 0.3s;
   }
 
@@ -393,7 +349,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     font-size: 12px;
     line-height: 0;
     margin-left: 5px;
-    width: 50%;
+    width: 30px;
     height: 30px;
     display: flex;
     align-items: center;
@@ -429,7 +385,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #FCD8A6;
+    color: #fff;
     position: absolute;
     font-size: 32px;
     top: 15px;
@@ -442,6 +398,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     position: fixed;
     overflow: hidden;
     inset: 0;
+    background: rgba(33, 37, 41, 0.8);
     transition: 0.3s;
   }
 
@@ -449,6 +406,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     display: block;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Global Footer
