--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,7 +299,6 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
 
 
 /* navmenu - Mobile */
-/* navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
     color: var(--nav-color);
@@ -313,10 +312,12 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
   .navmenu {
     padding: 0;
     z-index: 9997;
+    height: 50%;
   }
 
   .navmenu ul {
-    display: none;
+    display: flex;
+    flex-direction: column;
     list-style: none;
     position: absolute;
     inset: 60px 20px 20px 20px;
@@ -335,9 +336,10 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
     font-family: var(--nav-font);
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 500;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     white-space: nowrap;
@@ -352,6 +354,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
     width: 30px;
     height: 30px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -385,7 +388,7 @@ html[lang="en"] .navmenu .lang-ar { display: none; }
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: #FCD8A6;
     position: absolute;
     font-size: 32px;
     top: 15px;
@@ -735,11 +738,12 @@ section,
 
 #wlc {
   position: absolute;
-  left: 38%;
-  font-size: 4rem;
+  left: 50%;
+  margin-top: 5%;
+  font-size: 3rem;
       font-weight: bold;
       text-transform: uppercase;
-      letter-spacing: 8px;
+      letter-spacing: 2px;
       background: linear-gradient(90deg, #FCD8A6);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -760,9 +764,9 @@ section,
   position: absolute;
   color: #FCD8A6;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 200;
+  font-size: 3rem;
   font-style: oblique;
-  margin-top: 20%;
+  margin-top: 15%;
   left: 35%;
   animation: fadeIn 2s ease-in-out;
 }
